syntax = "proto3";

option csharp_namespace = "SimpleBlockchain.API";

package blockchain;
import "google/protobuf/empty.proto";

service BlockchainNode {
  rpc GetChain (google.protobuf.Empty) returns (GetChainReply);
}

message GetChainReply {
  repeated BlockReply chain = 1;
  int64 length = 2;
}

message BlockReply {
  int64 index = 1;
  string timestamp = 2;
  int64 nonce = 3;
  string previous_hash = 4;
  repeated TransactionReply transactions = 5;
}

message TransactionReply {
  string sender = 1;
  string recipient = 2;
  int32 amount = 3;
  int64 block_index = 4;
}